# computer-vision-2021

./: .gitignore  CMakeLists.txt  README.md
JackMatt96/Lab2/: CMakeLists.txt
JackMatt96/Lab2/Latex/: Lab_2.aux  Lab_2.tex
JackMatt96/Lab2/src/: Lab2.cpp  main.cpp  main1.cpp
JackMatt96/Lab3/: CMakeLists.txt
JackMatt96/Lab3/Latex/: Lab_3.tex
JackMatt96/Lab3/include/: filter.h
JackMatt96/Lab3/src/: filter.cpp  main.cpp  show_histogram_function.cpp
JackMatt96/Lab5/: CMakeLists.txt
JackMatt96/Lab5/Latex/: Giacomello_Mattia_Lab5.tex  Lab5.out  Lab5.tex
JackMatt96/Lab5/include/: PanoramicImage.h  panoramic_utils.h
JackMatt96/Lab5/src/: Lab5.cpp  PanoramicImage.cpp  main.cpp
JackMatt96/Lab6/: CMakeLists.txt
JackMatt96/Lab6/Latex/: Lab6.tex
JackMatt96/Lab6/include/: VideoObjectTracking.h
JackMatt96/Lab6/src/: Lab6.cpp  VideoObjectTracking.cpp
JackMatt96/Lab7/: lab_7_code.py
final_project/: CMakeLists.txt  boat_train.py  sea_test_all.sh  sea_train.py  vgg16.ipynb
final_project/include/: boat_detection.h  sea_segmentation.h
final_project/libs/: convert_model.py
final_project/libs/include/fdeep/: fdeep.hpp  import_model.hpp
final_project/src/: boat_detection.cpp  main.cpp  sea_segmentation.cpp
zarik5/lab1/: CMakeLists.txt  main.cpp
zarik5/lab1/src/: main.cpp
zarik5/lab2/: CMakeLists.txt  main.cpp
zarik5/lab3/: CMakeLists.txt  denoise_tests.cpp  denoise_tests.h  filter.cpp  filter.h  histogram_tests.cpp  histogram_tests.h  main.cpp  morphology_tests.cpp  morphology_tests.h
zarik5/lab4/: CMakeLists.txt  circle_detection.cpp  circle_detection.h  edge_detection.h  lines_detection.cpp  lines_detection.h  main.cpp
zarik5/lab5/: CMakeLists.txt  main.cpp  panoramic_image.cpp  panoramic_image.h  panoramic_utils.h
